--- a/TwelvvyRestaurantApp/AppShell.xaml
+++ b/TwelvvyRestaurantApp/AppShell.xaml
@@ -4,12 +4,40 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:TwelvvyRestaurantApp"
-    Shell.FlyoutBehavior="Disabled"
-    Title="TwelvvyRestaurantApp">
+    xmlns:pages="clr-namespace:TwelvvyRestaurantApp.Pages"
+    Shell.FlyoutBehavior="Flyout"
+    Title="Twelvvy Restaurant"
+    Shell.FlyoutBackgroundColor="Wheat"
+    Shell.FlyoutWidth="70"
+    >
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        Icon="home.png"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
+    
+    <ShellContent
+      Title="Orders"
+      Icon="orders.png"
+      ContentTemplate="{DataTemplate pages:OrdersPage}"
+      Route="OrdersPage" />
+    
+    <ShellContent
+      Title="Manage Menu"
+        Icon="manage.png"
+      ContentTemplate="{DataTemplate pages:ManageMenuItemPage}"
+      Route="ManageMenuItemPage" />
+
+
+    <Shell.FlyoutFooter>
+        <Image 
+            Source="phone.png" 
+            HeightRequest="20" 
+            WidthRequest="20"
+            Margin="0,0,0,25"
+            Aspect="AspectFill"
+            HorizontalOptions="Center"/>
+    </Shell.FlyoutFooter>
 
 </Shell>
